// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubGenerator jooq of jooq JHipster blueprint > run > should succeed 1`] = `
{
  ".jhipster/EntityA.json": {
    "stateCleared": "modified",
  },
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.jooq.md": {
    "stateCleared": "modified",
  },
  "jooq.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepositoryImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-jooq.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator jooq of jooq JHipster blueprint > with gradle > should succeed 1`] = `
{
  ".jhipster/EntityA.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.jooq.md": {
    "stateCleared": "modified",
  },
  "build.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/build.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/gradle/libs.versions.toml": {
    "stateCleared": "modified",
  },
  "gradle/jooq.gradle": {
    "stateCleared": "modified",
  },
  "gradle/libs.versions.toml": {
    "stateCleared": "modified",
  },
  "gradle/wrapper/gradle-wrapper.jar": {
    "stateCleared": "modified",
  },
  "gradle/wrapper/gradle-wrapper.properties": {
    "stateCleared": "modified",
  },
  "gradlew": {
    "stateCleared": "modified",
  },
  "gradlew.bat": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepositoryImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-jooq.yml": {
    "stateCleared": "modified",
  },
}
`;
